--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title> Club Atletico Baradero</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 
 <body>
     <!--encabezado-->
-    <header>
-        <h1><strong>Club Atletico Baradero</strong></h1>
-        <img src="img/escudo.png" alt="imagen del escudo del club atletico baradero">
-        <nav>
-            <a href="pages/futbol.html">futbol</a>
-            <a href="pages/basquet.html">basquet</a>
-            <a href="pages/voley.html">voley</a>
-            <a href="pages/patinaje.html">patinaje</a>
+    <header class="header">
+        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
+        <img class="escudo" src="img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <nav class="botones">
+            <button><a class="boton-inicio" href="index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="pages/futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="pages/basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="pages/voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="pages/patinaje.html">patinaje</a></button>
         </nav>
     </header>
 
@@ -56,7 +57,7 @@
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
                 vitae.</p>
-            <img src="img/placa.JPG" alt="imagen de una placa con el escudo del club atletico baradero">
+            <img src="img/placa.JPG" alt="imagen-de-una-placa-con-el-escudo-del-club-atletico-baradero">
             <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Reiciendis eum eligendi rerum sit explicabo
                 deserunt, dolorem in, ea architecto amet temporibus cumque ipsum molestiae, itaque ratione iste saepe ex
                 vitae.</p>
