--- a/pages/basquet.html
+++ b/pages/basquet.html
@@ -5,11 +5,26 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>basquet</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="/css/style.css">
 </head>
 
 <body>
-    <header>
+
+<header class="header" >
+        <h1 class="titulo"> <strong>Club Atletico Baradero</strong></h1>
+        <img class="escudo" src="/img/escudo.png" alt="imagen-del-escudo-del-club-atletico-baradero">
+        <nav class="botones">
+            <button><a class="boton-inicio"  href="/index.html">inicio</a></button>
+            <button><a class="boton-futbol" href="futbol.html">futbol</a></button>
+            <button><a class="boton-basquet" href="basquet.html">basquet</a></button>
+            <button><a class="boton-voley" href="voley.html">voley</a></button>
+            <button><a class="boton-patinaje" href="patinaje.html">patinaje</a></button>
+        </nav>
+</header>
+
+    <main>
+
+
         <h1>club atletico baradero</h1>
     
         <nav>
@@ -25,11 +40,6 @@
                 </li>
             </ul>
         </nav>
-    </header>
-
-
-
-    <main>
 
         <section id="basquet-masculino"></section>
         <h2>basquet Masculino</h2>
